updates readme, index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 	<body>
-		<p>Yup. Again here FOO Cntent in the body</p>
+		<p>Hello World</p>
 	</body>
 </html>
