--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Week 14 Lecture 1 Gulp</title>
     <script src="scripts/plugins/jquery-2.1.3.min.js"></script>
     <script src="scripts/main.js"></script>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="stylesheets/main.css">
 </head>
 	<body>
 		<p>Hello World</p>
