--- a/index.html
+++ b/index.html
@@ -1,13 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Week 14 Lecture 1 Gulp</title>
-    <script src="scripts/plugins/jquery-2.1.3.min.js"></script>
-    <script src="scripts/main.js"></script>
-    <link rel="stylesheet" href="stylesheets/main.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Scrabble Philly</title>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic|Oswald:400,700,300' rel='stylesheet' type='text/css'>
+  <link rel="icon" type="image/ico" href="favicon.ico">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">  
+  <link rel="stylesheet" href="stylesheets/main.css">
 </head>
-	<body>
-		<p>Hello World</p>
-	</body>
-</html>
+
+<body>
+	<header>
+		<div class="wrapper">
+			<a href="http://www.scrabblephilly.com" title="Scrabble Philly"><img src="images/logo-scrabblephilly.png" alt="Scrabble Philly Logo" /></a>
+			<p>MONDAY NIGHTS<br />6:30-8:30PM</p>
+		</div>
+	</header>
+	
+	<div class="main">
+		<div class="wrapper">
+			<div class="main-info">
+		        <h2>Unofficial, unsanctioned Scrabble Club in South Philly</h2>
+		        <p>
+		        	Mondays 6:30-8:30 PM at the Bottle Shop. Please arrive by 6:15 for the first game or by 7:15 if starting with game two.
+		        	<br><br>
+					We play two games per night starting at 6:30 PM, each game taking about an hour. You choose your opponent the first round and are paired the subsequent round based on performance that night. You can still play the second game if you miss the first.
+				</p>
+				
+        <!-- <ul class="icons">
+          <li><img src="images/icon-email.png" /></li>
+          <li><img src="images/icon-twitter.png" /></li>
+          <li><img src="images/icon-location.png" /></li>
+        </ul> -->
+
+        <button>MORE INFO</button>
+
+        <nav>
+	        <ul class="nav">
+	        	<li><button>RULES</button></li>
+	        	<li><button>EQUIPMENT</button></li>
+	        	<li><button>THE CLOCK</button></li>
+	        	<li><button>SCORING</button></li>
+	        </ul>
+        </nav>
+			</div>
+	
+			<div class="aside-info">
+				<div class="blocks">
+					<ul>
+						<li class="a">
+							<a href="http://bottleshopbeer.com/"><img src="images/logo-bottleshop.png" alt="The Bottle Shop 1616 E Passyunk" /></a>
+						</li>
+						<li class="b"></li>
+						<li class="c"></li>
+					</ul>
+				</div>
+			</div>
+
+		</div>
+	</div>
+</body>
