--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 						<li id="b" class="hover-scale">							
 							<div id="twitter" class="js-animate"><i class="fa fa-twitter"></i></div>
 							<div>
-
-								<!-- add twitter feed widget-->
+								<!-- twitter feed -->
 							
 							</div><!--/#twitter -->
 						</li><!-- /#b-->
@@ -76,7 +75,7 @@
 	                <li><button class="icon hover-scale" data-type="faq"><img src="images/icon-faq.svg" alt="FAQ"/></button></li>
 	                <li><button class="icon hover-scale" data-type="links"><img src="images/icon-link.svg" alt="Links"/></button></li>
 	                <li><button class="icon hover-scale" data-type="score"><img src="images/icon-score.svg" alt="Scores"/></button></li>
-	              </ul>
+	              </ul><!-- /.tabs-nav -->
 	              <button class="button-tabs js-tab-close">X</button>
 
 	              <div class="tabs-content">
@@ -86,7 +85,7 @@
 										<h2>FAQ</h2>
 										<ul>
 											<li>
-												<h3 class="js-STactivate" class="js-STactivate">Where and what is the Bottle Shop?</h3>
+												<h3 class="js-STactivate" class="js-STactivate">Where/what is the Bottle Shop?</h3>
 												<p class="js-ST">The Bottle Shop is a craft beer shop located at 1616 E Passyunk Ave. You can find out more at their website:	<a href="http://www.bottleshopbeer.com" class="center">The Bottle Shop</a></p>
 											</li>
 											<li>
@@ -94,7 +93,7 @@
 												<p class="js-ST">You can bring food and the Bottle Shop offers many snack &amp; beverage options.</p>
 											</li>							
 											<li>
-												<h3 class="js-STactivate">Do I need to RSVP ahead of time?</h3>
+												<h3 class="js-STactivate">Do I need to RSVP?</h3>
 												<p class="js-ST">Yes, please shoot us a quick email saying you'll make it:<a href="mailto:scrabblephilly@gmail.com" class="center"> scrabblephilly@gmail.com</a></p>
 											</li>
 											<li>
@@ -102,11 +101,11 @@
 												<p class="js-ST">It's a free community event, but purchasing from the bottle shop is encouraged.</p>
 											</li>
 											<li>
-												<h3 class="js-STactivate">How long is each game played for?</h3>
+												<h3 class="js-STactivate">How long is each game?</h3>
 												<p class="js-ST">A little under an hour.  10 point penalization for going a minute overtime, and another 10 points for every minute thereafter.</p>
 											</li>
 						        	<li>
-						        		<h3 class="js-STactivate">Are boards &amp; equipment provided?</h3>
+						        		<h3 class="js-STactivate">Is equipment provided?</h3>
 						        		<p class="js-ST">We provide boards, tiles, and a dictionary. A chess clock app and the scrabble dictionary can be downloaded for free on your smartphone.</p>
 						        	</li>
 											<li>
@@ -174,11 +173,15 @@
 									<textarea name="field3" placeholder="Type your Message"></textarea>
 									<input type="submit" value="Send" class="hover-scale"/>
 								</form>
-							</div>
+							</div><!--/#modal-rsvp -->
 
 							<div id="modal-map" class="modal-content">
 								<h2>Location</h2>
-							</div>
+								<div>
+									<!-- google map -->
+									<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:300px;width:100%;max-width:308px;"><div id="gmap_canvas" style="height:300px;width:100%;max-width:308px;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://premium-wordpress-themes.org" id="get-map-data">http://premium-wordpress-themes.org</a></div></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(39.9295267,-75.16411959999999),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(39.9295267, -75.16411959999999)});infowindow = new google.maps.InfoWindow({content:"<b>Scrabble Philly</b><br/>1616 E Passyunk Ave<br/>19147 Philadelphia" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});}google.maps.event.addDomListener(window, 'load', init_map);</script>
+								</div>
+							</div><!--/#modal-map -->
 
 				</div><!--/.modal-->
 			</div><!--/.modal-wrapper-->
