Added scrollTo.js, but need to implement.  Tried to smooth css transitions, didn't get far

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="stylesheets/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <script src="js/jquery.scrollTo.min.js"></script>
   <script src="js/main.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="stylesheets/animate.min.css">
@@ -86,9 +87,9 @@
 
 								<!-- TABS NAV -->
 	              <ul id="tabs-nav-icons" class="js-tabs-nav">
-	                <li><button class="icon hover-scale" data-type="faq"><img src="images/icon-faq.svg" alt="FAQ"/></button></li>
-	                <li><button class="icon hover-scale" data-type="links"><img src="images/icon-link.svg" alt="Links"/></button></li>
-	                <li><button class="icon hover-scale" data-type="score"><img src="images/icon-score.svg" alt="Scores"/></button></li>
+	              <li><button class="icon blur hover-scale" data-type="faq"><img src="images/icon-faq.svg" alt="FAQ"/></button></li>
+	                <li><button class="icon blur hover-scale" data-type="links"><img src="images/icon-link.svg" alt="Links"/></button></li>
+	                <li><button class="icon blur hover-scale" data-type="score"><img src="images/icon-score.svg" alt="Scores"/></button></li>
 	              </ul><!-- /.tabs-nav -->
 	              <button class="button-close js-tab-close"><i class="fa fa-times"></i></button>
 
@@ -174,7 +175,7 @@
 			</section><!--/#blocks-->
 
 			<!-- MODALS -->
-			<div class="modal-wrapper animated fadeIn">
+			<div class="modal-wrapper">
 				<div class="modal">
 					<button class="button-close-modal js-modal-close hover-scale"><i class="fa fa-times"></i></button>
 							
