Added scrollTo, removed jsAccordion, fixed twitter animation, still working on slideToggle/scrollTo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">  
   <link rel="stylesheet" href="stylesheets/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
-  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   <script src="js/jquery.scrollTo.min.js"></script>
   <script src="js/main.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -37,20 +36,20 @@
 	      	<button class="js-STactivate js-gameInfo hover-scale"><h2>GAME INFO</h2></button>
 	        <ul class="js-ST">
 	        	<li>
-	        		<h3>GENERAL</h3>
-	        		<p>We play two games per night starting at 6:30 PM, each game taking about an hour. You choose your opponent the first round and are paired the subsequent round based on performance that night. You can still play the second game if you miss the first.</p>
+	        		<h3 class="js-STactivate">GENERAL</h3>
+	        		<p class="js-ST">We play two games per night starting at 6:30 PM, each game taking about an hour. You choose your opponent the first round and are paired the subsequent round based on performance that night. You can still play the second game if you miss the first.</p>
 	        	</li>
 	        	<li>
-	        		<h3>RULES</h3>
-	        		<p>Scrabble Philly roughly follows the rules of tournament Scrabble.  Since this is a casual club used for bettering your skills, cheat sheets are allowed and you are allowed to look words up in the dictionary before playing [just no scanning the dictionary for possible words to use].</p>
+	        		<h3 class="js-STactivate">RULES</h3>
+	        		<p class="js-ST">Scrabble Philly roughly follows the rules of tournament Scrabble.  Since this is a casual club used for bettering your skills, cheat sheets are allowed and you are allowed to look words up in the dictionary before playing [just no scanning the dictionary for possible words to use].</p>
 	        	</li>
 	        	<li>
-	        		<h3>THE CLOCK</h3>
-	        		<p>Game clocks are used to allot 25 minutes of playing time to each player.  Clock starts when first player looks at first tile.  Neutralize clock to dispute score, call for director, during challenges, etc.  Your turn does not end until you hit your clock.</p>
+	        		<h3 class="js-STactivate">THE CLOCK</h3>
+	        		<p class="js-ST">Game clocks are used to allot 25 minutes of playing time to each player.  Clock starts when first player looks at first tile.  Neutralize clock to dispute score, call for director, during challenges, etc.  Your turn does not end until you hit your clock.</p>
 	        	</li>
 	        	<li>
-	        		<h3>SCORING</h3>
-	        		<p>You must keep track of your score and that of your opponent.  Score sheets are provided by the Club, but you may use your own if you wish.  Remember to fill out and turn in your Score Card as soon as you finish your game - player statistics are published weekly on club website.</p>
+	        		<h3 class="js-STactivate">SCORING</h3>
+	        		<p class="js-ST">You must keep track of your score and that of your opponent.  Score sheets are provided by the Club, but you may use your own if you wish.  Remember to fill out and turn in your Score Card as soon as you finish your game - player statistics are published weekly on club website.</p>
 	        	</li>
 	        </ul>
 	      </div><!--/.intro-info-->
