--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
 							
 							<div id="modal-rsvp" class="modal-content">
 								<h2>Contact Us</h2>
-								<form>
-									<input type="text" name="field1" placeholder="Your Name" />
-									<input type="email" name="field2" placeholder="Email Address" />
-									<textarea name="field3" placeholder="Type your Message"></textarea>
+								<form action="index.php" enctype="multipart/form-data" method="post">
+									<input type="text" name="name" placeholder="Your Name" />
+									<input type="email" name="email" placeholder="Email Address" />
+									<textarea name="message" placeholder="Type your Message"></textarea>
 									<input type="submit" value="Send" class="hover-scale"/>
 								</form>
 							</div><!--/#modal-rsvp -->
@@ -192,7 +192,7 @@
 								<h2>Location</h2>
 								<div>
 									<!-- google map -->
-									<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:300px;width:100%;max-width:308px;"><div id="gmap_canvas" style="height:300px;width:100%;max-width:308px;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://premium-wordpress-themes.org" id="get-map-data">http://premium-wordpress-themes.org</a></div></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(39.9295267,-75.16411959999999),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(39.9295267, -75.16411959999999)});infowindow = new google.maps.InfoWindow({content:"<b>Scrabble Philly</b><br/>1616 E Passyunk Ave<br/>19147 Philadelphia" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});}google.maps.event.addDomListener(window, 'load', init_map);</script>
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3059.530042500956!2d-75.16631664902393!3d39.929532079323714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c60f82769ea5%3A0x5a907db2ec053268!2sThe+Bottle+Shop!5e0!3m2!1sen!2sus!4v1459390913767" width="300" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 								</div>
 							</div><!--/#modal-map -->
 
