Added ajax mail submission

--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 							
 							<div id="modal-rsvp" class="modal-content">
 								<h2>Contact Us</h2>
-								<form action="index.php" enctype="multipart/form-data" method="post">
-									<input type="text" name="name" placeholder="Your Name" />
-									<input type="email" name="email" placeholder="Email Address" />
-									<textarea name="message" placeholder="Type your Message"></textarea>
-									<input type="submit" value="Send" class="hover-scale"/>
+								<form id="contact_form" enctype="multipart/form-data">
+									<input type="text" id="name" name="name" placeholder="Your Name" />
+									<input type="email" id="email" name="email" placeholder="Email Address" />
+									<textarea id="message" name="message" placeholder="Type your Message"></textarea>
+									<input type="submit" value="Send" class="hover-scale submit"/>
 								</form>
 							</div><!--/#modal-rsvp -->
 
