Cleaned up icon buttons for desktop only, google map width, and other small updates

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 			<button class="button-close-modal js-modal-close hover-scale"><i class="fa fa-times"></i></button>
 					
 					<div id="modal-rsvp" class="modal-content">
-						<h2>Contact Us</h2>
+						<h2>RSVP</h2>
 						<form id="contact_form" enctype="multipart/form-data">
 							<input type="text" id="name" name="name" placeholder="Your Name" />
 							<input type="email" id="email" name="email" placeholder="Email Address" />
@@ -226,7 +226,7 @@
 						<h2>Location</h2>
 						<div>
 							<!-- google map -->
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3059.530042500956!2d-75.16631664902393!3d39.929532079323714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c60f82769ea5%3A0x5a907db2ec053268!2sThe+Bottle+Shop!5e0!3m2!1sen!2sus!4v1459390913767" max-width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3059.530042500956!2d-75.16631664902393!3d39.929532079323714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c60f82769ea5%3A0x5a907db2ec053268!2sThe+Bottle+Shop!5e0!3m2!1sen!2sus!4v1459390913767" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
 					</div><!--/#modal-map -->
 
